--- a/package.json
+++ b/package.json
@@ -1,13 +1,39 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next",
+		"build": "next build",
+		"start": "next start",
+		"lint:css": "stylelint './app/**/*.{ts,tsx}'"
+	},
+	"dependencies": {
+		"effector": "^22.1.2",
+		"effector-react": "^22.0.6",
+		"next": "~12.0.8",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"styled-components": "^5.3.3"
+	},
+	"devDependencies": {
+		"@babel/eslint-parser": "^7.16.5",
+		"@stylelint/postcss-css-in-js": "^0.37.2",
+		"@types/node": "^17.0.12",
+		"@types/react": "^17.0.38",
+		"@types/react-dom": "^17.0.11",
+		"@types/styled-components": "^5.1.21",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@zendeskgarden/eslint-config": "^27.0.0",
+		"@zendeskgarden/stylelint-config": "^17.0.0",
+		"babel-plugin-styled-components": "^2.0.2",
+		"eslint": "^8.7.0",
+		"eslint-config-next": "^12.0.8",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-node": "^11.1.0",
+		"postcss-syntax": "^0.36.2",
+		"stylelint": "^14.3.0",
+		"stylelint-config-styled-components": "^0.1.1",
+		"stylelint-order": "^5.0.0",
+		"stylelint-processor-styled-components": "^1.10.0",
+		"typescript": "^4.5.5"
+	}
 }
