--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"lint:css": "stylelint './app/**/*.{ts,tsx}'"
+		"lint:css": "stylelint './app/**/*.{ts,tsx,css}'"
 	},
 	"dependencies": {
 		"effector": "^22.1.2",
