--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 		"dev": "next",
 		"build": "next build",
 		"start": "next start",
-		"lint:css": "stylelint './app/**/*.{ts,tsx,css}'"
+		"lint:css": "stylelint './app/**/*.{ts,tsx,css}'",
+    "lint:fix": "eslint --fix '**/*.{ts,tsx}' && stylelint \"**/*.{ts,tsx,css}\" --fix --quiet"
 	},
 	"dependencies": {
 		"effector": "^22.1.2",
@@ -16,6 +17,8 @@
 	},
 	"devDependencies": {
 		"@babel/eslint-parser": "^7.16.5",
+		"@commitlint/cli": "^16.1.0",
+		"@commitlint/config-angular": "^16.0.0",
 		"@stylelint/postcss-css-in-js": "^0.37.2",
 		"@types/node": "^17.0.12",
 		"@types/react": "^17.0.38",
@@ -29,11 +32,17 @@
 		"eslint-config-next": "^12.0.8",
 		"eslint-plugin-jsx-a11y": "^6.5.1",
 		"eslint-plugin-node": "^11.1.0",
+		"husky": "^7.0.4",
 		"postcss-syntax": "^0.36.2",
 		"stylelint": "^14.3.0",
 		"stylelint-config-styled-components": "^0.1.1",
 		"stylelint-order": "^5.0.0",
 		"stylelint-processor-styled-components": "^1.10.0",
 		"typescript": "^4.5.5"
-	}
+	},
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-angular"
+    ]
+  }
 }
