--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/consistent-type-imports": "error",
+    "@typescript-eslint/naming-convention": "off",
     "max-len": ["warn", 100]
   }
 }
