feat(api): add endpoints for all data entities

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     "baseUrl": ".",
     "paths": {
 			"@pages/*": ["./pages/*"],
-			"@app/*": ["./app/*"]
+			"@app/*": ["./app/*"],
+      "@/*": ["./*"]
 		}
 	},
   "include": [
