--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
     "@typescript-eslint/consistent-type-imports": "error",
     "@typescript-eslint/naming-convention": "off",
     "@typescript-eslint/no-redeclare": "off",
+    "@typescript-eslint/no-use-before-define": "off",
     "max-len": ["warn", 100]
   }
 }
