--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,8 @@
     "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/no-extra-parens": "off",
     "@typescript-eslint/indent": "off",
+    "function-paren-newline": "off",
+    "implicit-arrow-linebreak": "off",
     "object-property-newline": "off",
     "max-len": ["warn", 100]
   }
